# mini_substation_automation

./: README.md  TODO.txt
application_config/SCL_files/: model_substation.scd
application_config/gateway_config_ini/: config.local.ini  config.remote.ini
application_config/iec61850_open_server_config/: BUS1.cfg  BUS1.ext  BUS2.cfg  BUS2.ext  FEED1.cfg  FEED1.ext  FEED2.cfg  FEED2.ext  TR1.cfg  TR1.ext  TR2.cfg  TR2.ext  hw_connector.config  ui_connector.config
application_config/scada_database/: datapoints.ini  datapoints_notes.ini  elements.json  mongo-init_database.js  mongo-init_database_local.js  mongo-init_database_remote.js
docs/: mini_substation.drawio  structure.txt  substation.txt
docs/Manual/: Simulator_usage.md  ied_ui_manual.docx  relay_manual.docx
docs/architecture/: designer_1_ed1(1).scd  designer_1_ed4.scd  substation-model.scd
docs/communication_maps/: iec61850.txt
docs/frontpanel_design/: cabinet_sketch_300dpi.xcf  dimensions_mm.txt  rename.py  resolution.txt  stickervel.xcf
firmware/arduino/: menu.ino  menu_progmem.ino
firmware/arduino_relay/: AdcManager.cpp  AdcManager.h  Config.h  EthernetMgr.h  ModbusSrv.h  RelayUI.cpp  RtuLogic.cpp  mk  ms_rtu.ino
firmware/rpi_gateway/: gateway.service  steps.txt
firmware/rpi_relay/: .xsession  bridge-veth.service  hw.service  server1.service  server2.service  server3.service  server4.service  server5.service  server6.service  steps.txt  (+2 more)
tests/0_unit/rly01/hw_connector/: CMakeLists.txt  config_parser.c  config_parser.h  main.c
tests/0_unit/rly01/ui_connector/: CMakeLists.txt  main.c
(+78 files in other folders)
